Fix scaling issues for .alignright images

--- a/wp-content/themes/Theme/stylesheets/scss/modules/_blog_post.scss
+++ b/wp-content/themes/Theme/stylesheets/scss/modules/_blog_post.scss
@@ -90,6 +90,16 @@
 			font-size: 16px;
 			line-height: 26px;
 		}
+		img.alignright {
+			height: auto;
+			@media screen and (max-width: 800px) {
+				margin-right: calc(50% - 50vw);
+				max-width: calc(100% + 50px);
+			}
+			@media screen and (min-width: 800px) {
+				max-width: 100%;
+			}
+		}
 		.alignright {
 			float: right;
 			margin: 25px 0 25px 25px;
